hw06/test/zm-hw6-classFun-override-MismatchParam-float3-intarray.fmj
public int main() { }

public class C0  {
    public class C0 id(float a){
        return new C0();
    }
}

public class C1 extends C0{
    public class C0 id(int [] a){ // error
        return new C0();
    }
}
